# qc-options-framework

./: .coveragerc  .gitignore  .mamba  .pdm-python  .windsurfrules  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  research.ipynb  run_tests.sh
.airesearch/: claude-research.md  deepseek-datahandler.md  deepseek-research.md  deepseek-splithandler.md  gemini-research.md  o1-research.md  o3-datahandler.md  o3-mini-research.md
Alpha/: AssignmentModel.py  Base.py  CCModel.py  FPLModel.py  FutureSpread.py  SPXButterfly.py  SPXCondor.py  SPXic.py  __init__.py
CustomIndicators/: ATRLevels.py  __init__.py
Data/: GoogleSheetsData.py
Evaluate/: Base.py  Evaluate.py  SPXic1.py  SPXic2.py  __init__.py
Execution/: AutoExecutionModel.py  Base.py  SPXExecutionModel.py  SmartPricingExecutionModel.py  __init__.py
Initialization/: AlwaysBuyingPowerModel.py  BetaFillModel.py  HandleOrderEvents.py  MidPriceFillModel.py  SetupBaseStructure.py  TastyWorksFeeModel.py  __init__.py
Monitor/: Base.py  CCMonitor.py  FPLMonitorModel.py  HedgeRiskManagementModel.py  NoStopLossModel.py  SPXButterflyMonitor.py  SPXCondorMonitor.py  SPXicMonitor.py  StopLossModel.py  __init__.py
Order/: Base.py  Order.py  OrderBuilder.py  __init__.py
PortfolioConstruction/: Base.py  OptionsPortfolioConstruction.py  OptionsPortfolioConstructionModel.py  __init__.py
Research/: Charting.py  __init__.py
Strategy/: Position.py  __init__.py
Test/: __init__.py  test_helper.py
Tests/: __init__.py  conftest.py  factories.py  spec_helper.py
Tools/: BSMLibrary.py  Charting.py  (+11 more)
(+52 files in other folders)
